--- a/src/app/main/user/user.component.html
+++ b/src/app/main/user/user.component.html
@@ -52,8 +52,8 @@
         <div class="select-contract container-img-file" >
           <div class="upload-image-region d-flex flex-column container-img-file-1">
             <img src="assets/img/img-icon.svg" alt="#" width="50px">
-            <div class="text-choose-file">Chọn file ảnh chữ ký từ máy tính của bạn.</div>
-            <div class="text-support-extension">Hỗ trợ định dạng PNG, JPG, JPGE</div>
+            <div class="text-choose-file">{{'choose.sign.file.image' | translate}}</div>
+            <div class="text-support-extension">{{'support.format.PNG.JPG.JPGE' | translate}}</div>
           </div>
         </div>
         <div class="btn-footer">
