--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -72,7 +72,7 @@
 
               <div class="form-group">
                 <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center;">
-                  <strong>{{errorDetail}}</strong>
+                  <strong>{{errorDetail | translate}}</strong>
                 </p>
               </div>
 
