--- a/src/app/login/reset-password/reset-password.component.html
+++ b/src/app/login/reset-password/reset-password.component.html
@@ -78,12 +78,12 @@
 
           <div class="form-group">
             <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center;">
-              <strong>{{errorDetail}}</strong>
+              <strong>{{errorDetail | translate}}</strong>
             </p>
           </div>
 
           <div class="form-group" style="text-align: center;">
-            <button (click)="sendResetPassword(); error ? false : open(mymodal)" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">{{'btn.sendRequest' | translate}}</button>
+            <button (click)="sendResetPassword();" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">{{'btn.sendRequest' | translate}}</button>
           </div>
         </form>
       </div>
@@ -97,30 +97,3 @@
   </div>
   </div>
 </body>
-
-<!-- Popup notification reset password -->
-<ng-template #mymodal let-modal >
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="modal-header" style="align-items: start; height: 50px;">
-          <h3>THÔNG BÁO</h3>
-          <button type="button" class="close" (click)="modal.dismiss('Cross click')" style="border: none;background: none;">
-            <span style="font-size: 25px;">×</span>
-          </button>
-        </div>
-
-          <div class="form-group">
-            <div class="input-group">
-              <p class="alert" role="alert"  [ngClass]="{'alert-danger' : status==0, 'alert-primary' : status==1}" style="text-align: center;">
-              {{notification}}
-            </p>
-            </div>
-          </div>
-          <div class="form-group" style="text-align: center; padding-top: 30px;">
-            <button (click)="modal.dismiss('Cross click'); status==1 ? returnLogin():1" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">Đồng ý</button>
-          </div>
-      </div>
-    </div>
-  </div>
-</ng-template>
