--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -104,4 +104,4 @@
     </div>
   </div>
 </div>
-<app-footer-signature *ngIf="loaded" [datas]="datas" [view]="view" (submitChanges)="submitEvents($event)"></app-footer-signature>
+<app-footer-signature *ngIf="loaded" [datas]="datas" [view]="view" [recipientId]="recipientId" (submitChanges)="submitEvents($event)"></app-footer-signature>
