--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.scss
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.scss
@@ -390,15 +390,17 @@ input[type=number] {
   color: #106DB6;
   text-align: center;
   border-radius: 5px;
+  outline: none;
 }
 
 .required-title {
-  color: #ffc107;
+  color: red;
 }
 
 .notify {
   width: 100% !important;
   text-align: left;
+  color: #ffc107;
 }
 
 //::ng-deep .mat-form-field-flex {
