--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -87,7 +87,7 @@
                   <span class="label text-color">OTP</span>
                 </div>
                 <div class="participants__name">
-                  <div class="label text-color">Số điện thoại: <span class="required-title">*</span></div>
+                  <div class="label text-color">Số điện thoại: <span *ngIf="d.is_otp" class="required-title">*</span></div>
                   <input type="number" placeholder="Nhập số điện thoại" [(ngModel)]="d.phone">
                 </div>
               </div>
@@ -294,7 +294,7 @@
                     <span class="label text-color">OTP</span>
                   </div>
                   <div class="participants__name">
-                    <div class="label text-color">Số điện thoại: <span class="required-title">*</span></div>
+                    <div class="label text-color">Số điện thoại: <span *ngIf="d.is_otp" class="required-title">*</span></div>
                     <input type="number" placeholder="Nhập số điện thoại" [(ngModel)]="d.phone">
                   </div>
                 </div>
@@ -411,7 +411,7 @@
                       <span class="label text-color">OTP</span>
                     </div>
                     <div class="participants__name">
-                      <div class="label text-color">Số điện thoại: <span class="required-title">*</span></div>
+                      <div class="label text-color">Số điện thoại: <span *ngIf="d.is_otp" class="required-title">*</span></div>
                       <input type="number" placeholder="Nhập số điện thoại" [(ngModel)]="d.phone">
                     </div>
                   </div>
