--- a/src/app/main/contract/add-contract/add-contract.component.html
+++ b/src/app/main/contract/add-contract/add-contract.component.html
@@ -5,7 +5,7 @@
   <app-contract-header #contractHeader [AddComponent]="this" [datas]="datas" [step]="step"></app-contract-header>
   <ng-container>
     <app-infor-contract #infoContract *ngIf="step == 'infor-contract'" [datas]="datas" [step]="step" (stepChangeInfoContract)="getStep($event)"></app-infor-contract>
-    <app-determine-signer #determineSigner *ngIf="step == 'determine-contract'" [datas]="datas" [step]="step" (stepChangeDetermineSigner)="getStep($event)"></app-determine-signer>
+    <app-determine-signer #determineSigner *ngIf="step == 'determine-contract'" [datas]="datas" [saveDraftStep]="datas.save_draft.determine_signer" [step]="step" (stepChangeDetermineSigner)="getStep($event)"></app-determine-signer>
     <app-sample-contract #sampleContract *ngIf="step == 'sample-contract'" [datas]="datas" [step]="step" (stepChangeSampleContract)="getStep($event)"></app-sample-contract>
     <app-confirm-infor-contract #confirmInforContract *ngIf="step == 'confirm-contract'" [datas]="datas" [step]="step" (stepChangeConfirmInforContract)="getStep($event)"></app-confirm-infor-contract>
   </ng-container>
