--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -179,7 +179,9 @@
     <div class="col-md-11 contract--content">
       <div class="contract__content--title">
         <div style="width: 72px">{{'doi_tac' | translate | uppercase}} -</div>
-        <input type="text" placeholder="{{(item.type == 2 ? 'nhap_ten_doi_tac_to_chuc' : '') | translate}}" [(ngModel)]="item.name" [disabled]="item.type == 3">
+<!--        <input *ngIf="item.type == 2" type="text" placeholder="{{(item.type == 2 ? 'nhap_ten_doi_tac_to_chuc' : '') | translate}}" [(ngModel)]="item.name">-->
+        <input type="text" placeholder="{{'nhap_ten_doi_tac_to_chuc' | translate}}" [(ngModel)]="item.name" [disabled]="item.type == 3">
+<!--        <input *ngIf="item.type == 3" type="text" [ngModel]="this.getNameIndividual" disabled>-->
       </div>
       <div *ngIf="this.dataParnterOrganization().length > 1" style="display: flex; justify-content: flex-end">
         <u class="label text-color" (click)="deletePartner(id)" style="background-color: #FFFFFF; cursor: pointer">{{(item.type == 2 ? 'xoa_doi_tac_to_chuc' : 'xoa_doi_tac_ca_nhan') | translate}}</u>
@@ -404,7 +406,7 @@
                       <div class="input-data">
                         <img src="assets/img/icon_name.svg" class="input-img">
                         <input [id]="'signature-partner-' + d.ordering" type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
-                               [(ngModel)]="d.name">
+                               [(ngModel)]="d.name" (change)="getName($event, item)">
                       </div>
                     </div>
                     <div class="participants-otp" style="z-index: -1">
