--- a/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
+++ b/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
@@ -8,11 +8,11 @@
   <div style="max-height: 405px; overflow: auto;">
     <div *ngFor="let d of is_list_name">
       <div style="display: flex; justify-content: space-between; text-align: center; margin-bottom: 10px">
-        <div style="display: flex; flex-direction: column">
+        <div class="col-md-6" style="display: flex; flex-direction: column">
           <span>{{d.name}}</span>
           <span style="color: #8B8B8B">({{d.name_company}})</span>
         </div>
-        <div style="display: flex; flex-direction: column">
+        <div class="col-md-6" style="display: flex; flex-direction: column">
           <span [style.color]="d.status == 1 ? '#106DB6' : '#545252'">{{getStatus(d.status)}}</span>
           <span style="color: #8B8B8B">({{getDateTime(d) | date: 'HH:mm dd/MM/yyyy'}})</span>
         </div>
