edit login (user ngoai)

--- a/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
+++ b/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
@@ -126,7 +126,7 @@
   <div class="content_footer"></div>
   <div>
     <button type="button" name="next" class="next draft-button">Lưu nháp</button>
-    <button (click)="next()" type="button" name="next" class="next action-button pull-right">Tiếp theo</button>
+    <button (click)="next()" type="button" name="next" class="next action-button pull-right">Hoàn thành</button>
   </div>
 </div>
 
