--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.scss
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.scss
@@ -272,7 +272,7 @@ input[type=number] {
         margin-bottom: 14px;
 
         .participants-signature-type {
-          width: 90%;
+          width: 95%;
           text-align: center;
         }
       }
@@ -326,10 +326,10 @@ input[type=number] {
       .select-text-input {
         display: flex;
         //margin: 0 29px;
-        margin: 0 44px;
+        //margin: 0 44px;
 
         div:first-child, div:last-child {
-          width: 42%;
+          //width: 42%;
         }
 
         .participants__name:last-child {
@@ -390,6 +390,17 @@ input[type=number] {
   color: #106DB6;
   text-align: center;
   border-radius: 5px;
+  outline: none;
+}
+
+.required-title {
+  color: red;
+}
+
+.notify {
+  width: 100% !important;
+  text-align: left;
+  color: #ffc107;
 }
 
 //::ng-deep .mat-form-field-flex {
