--- a/src/app/main/contract/detail-contract/detail-contract.component.html
+++ b/src/app/main/contract/detail-contract/detail-contract.component.html
@@ -1,1 +1,72 @@
-<p>detail-contract works!</p>
+<div class="sample-contract row" *ngIf="loaded && valid">
+  <!--  information contract-->
+  <div class="col-md-3 sample-contract__information" style="background-color: white;">
+    <div class="sample-contract__information--drag" id="width-element-info" style="margin-top: 15px">
+      <div style="padding-bottom: 10px; text-align: center; font-weight: bold" class="label" (click)="t()">THÔNG TIN CHI TIẾT HỢP ĐỒNG</div>
+      <div style="line-height: 25px">
+        <div>
+          <span class="title-contract">Loại hợp đồng:</span>
+          <span>{{datas.is_data_contract.type_id}}</span>
+        </div>
+        <div>
+          <span class="title-contract">Tên hợp đồng:</span>
+          <span>{{datas.is_data_contract.name}}</span>
+        </div>
+        <div>
+          <span class="title-contract">Số hợp đồng:</span>
+          <span>{{datas.is_data_contract.code}}</span>
+        </div>
+        <div>
+          <span class="title-contract">File đính kèm:</span>
+<!--          <span>-->
+<!--            <a *ngFor="let d of this.datas.contract_information.file_attach" style="color: #106DB6" rel="stylesheet" href="https://vnexpress.net/" target="_blank">{{d.file_name}}</a>-->
+<!--          </span>-->
+        </div>
+        <div>
+          <span class="title-contract">Hợp đồng liên quan:</span>
+<!--          <span *ngFor="let d of this.datas.contract_information.file_related_contract" style="color: #106DB6">-->
+<!--            {{d.file_name}} <span style="color: black">, </span>-->
+<!--          </span>-->
+        </div>
+
+      </div>
+    </div>
+    <hr>
+
+    <div class="location-change" [ngStyle]="changeDisplay()">
+      <div class="sample-contract__information--user-sign" style="line-height: 25px">
+        <div style="text-align: center; font-weight: bold" class="label">CÁC BÊN LIÊN QUAN</div>
+        <!--        <div *ngFor="let d of this.isPartySignature">-->
+        <!--          <div>{{d.name}}</div>-->
+        <!--        </div>-->
+        <div *ngFor="let d of this.datas.contract_related">
+          <span>{{d.name_company}}</span>
+        </div>
+
+      </div>
+      <div>
+        <u style="color: #106DB6; padding-right: 3px; cursor: pointer" (click)="processHandleContract()">Luồng xử lý hợp đồng</u>
+      </div>
+    </div>
+  </div>
+
+  <!--  file content-->
+  <!--  width: 74.7%-->
+  <div class="col-md-9 sample-contract__file viewer-pdf isDrag"
+       style="background-color: #F2F2F2; position: relative;">
+    <div id="pdf-viewer-step-3">
+      <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">
+        <div class="resize-drag not-out-drop"
+             [id]="d.id"
+             style="z-index: -1;"
+             #itemElement
+             (click)="getSignSelect(d)"
+             [ngClass]="changeColorDrag(null, d, true)"
+             [ngStyle]="changePosition(d)">
+          <div class="name-sig-img-daky">{{(d.name && !d.value) ? d.name : ''}}</div>
+          <app-image-sign-contract-detail [datas]="datas"  [sign]="d"></app-image-sign-contract-detail>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
