--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -63,17 +63,17 @@
             </div>
           </div>
         </div>
-        <div class="label" style="text-align: center; font-weight: bold;" *ngIf="this.datas.roleContractReceived == 3">
+        <div class="label" style="text-align: center; font-weight: bold;" *ngIf="this.datas.roleContractReceived == 3 || this.datas.roleContractReceived == 4">
           <p class="d-flex justify-content-center mb-4 text-uppercase">XÁC NHẬN KÝ HỢP ĐỒNG</p>
           <p class="d-flex mb-2 text-align-left mx-3">Bạn có đồng ý với nội dung của hợp đồng và xác nhận ký?</p>
           <div class="confirm-radio d-flex justify-content-between mx-4">
             <div class="radio-confirm">
-              <input id="radio-confirm-signature" type="radio" name="confirm-radio-signature" [value]="1" [(ngModel)]='confirmSignature'>
-              <label for="radio-confirm-signature" class="ms-2">Đồng ý</label>
+              <input id="radio-confirm-secretary" type="radio" name="confirm-radio-secretary" [value]="1" [(ngModel)]='confirmSecretary'>
+              <label for="radio-confirm-secretary" class="ms-2">Đồng ý</label>
             </div>
             <div class="radio-refuse">
-              <input id="radio-refuse-signature" type="radio" name='confirm-radio-signature' [value]="2" [(ngModel)]='confirmSignature'>
-              <label for="radio-refuse-signature" class="ms-2">Không đồng ý</label>
+              <input id="radio-refuse-secretary" type="radio" name='confirm-radio-secretary' [value]="2" [(ngModel)]='confirmSecretary'>
+              <label for="radio-refuse-secretary" class="ms-2">Không đồng ý</label>
             </div>
           </div>
           <!--<p class="mb-3 mt-3 text-align-left">Chọn loại ký</p>
