--- a/src/app/main/contract/detail-contract/detail-contract.component.scss
+++ b/src/app/main/contract/detail-contract/detail-contract.component.scss
@@ -282,3 +282,36 @@
   width: 135px;
   height: 85px!important;
 }
+.action-button {
+  width: 114px;
+  height: 30px;
+  background: #106DB6;
+  //font-weight: bold;
+  color: white;
+  border: 0 none;
+  border-radius: 7px;
+  cursor: pointer;
+  margin: 5px 5px;
+}
+
+.footer-contract {
+  border-top: 1px solid #ddd;
+  display: flex;
+  align-items: center;
+  height: 46px;
+  .content_footer {
+    color:#0160AE;
+    font-size: 13px;
+    font-weight: 500;
+    width: 24.36%;
+    text-align: center;
+  }
+  .btn_footer {
+    display: flex;
+    justify-content: space-between;
+    width: 75.64%;
+    button {
+      outline: none;
+    }
+  }
+}
