--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -54,10 +54,9 @@
 
 header {
   position: fixed;
-  left: 220px;
   top: 0;
   z-index: 100;
-  width: calc(100% - 220px);
+  //width: calc(100% - 220px);
   background: #fff;
   height: 60px;
   padding: 0 1rem;
